# yubiserver

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  yubiserver-admin.1  yubiserver-admin.c  yubiserver-admin.sgml  yubiserver.1  yubiserver.c  yubiserver.cfg  yubiserver.h  yubiserver.sgml  yubiserver.sqlite.init
debian/: README.Debian  changelog  control  copyright  init  rules  watch  yubiserver.dirs  yubiserver.install  yubiserver.postinst  yubiserver.postrm  yubiserver.preinst
debian/patches/: automake_upgrade.patch  series
debian/upstream/: signing-key.asc
